Update authentication and UI design